# PicoDVI

software/apps/: CMakeLists.txt
software/apps/spi_show/: CMakeLists.txt  main.c
software/assets/: testcard_1280x60_rgb565.h
software/libdvi/: dvi.c  dvi.h  tmds_encode.S  tmds_encode.c  tmds_encode.h
software/scripts/png2array/: Makefile  png2array.go
